--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin 10s linear 0s infinite alternate;
+    /* animation: App-logo-spin 20s 20s linear; */
   }
 }
 
@@ -33,6 +34,6 @@
     transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(120deg);
   }
 }
