--- a/src/style/Team.css
+++ b/src/style/Team.css
@@ -1,16 +1,16 @@
-.section--exp {
-    margin-top: 50px;
-    padding: 110px 20px 0;
+.team{
+    margin-top: 40px;
+    padding: 100px 20px 0;
 }
-.section--exp .inner {
+.inner {
     max-width: 1600px;
     margin: 0 auto;
 }
-.section--exp .exp-title {
+.title {
     font-size: 60px;
     color: #f1f2f3;
 }
-.section--exp .exp-cards {
+.team-cards {
     margin-top: 50px;
     display: grid;
     grid-template-columns: repeat(auto-fit, 32%);
@@ -18,24 +18,24 @@
 }
 
 @media screen and (max-width: 1380px) {
-    .section--exp {
+    .team {
         padding: 90px 20px 0;
     }
-    .section--exp .exp-title {
-        font-size: 45px;
+   .title {
+        font-size: 50px;
     }
-    .section--exp .exp-cards {
+   .team-cards {
         grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     }
 }
 
 @media screen and (max-width: 768px) {
-    .section--exp .exp-title {
+   .title {
         font-size: 32px;
         text-align: center;
         font-weight: 500;
     }
-    .section--exp .exp-cards {
+   .team-cards {
         grid-template-columns: repeat(auto-fit, 100%);
     }
 }
