--- a/src/style/Helloworld.css
+++ b/src/style/Helloworld.css
@@ -1,78 +1,87 @@
-.sectionw{
-	position: relative;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding: 5vh 20px;
-	margin-top: 100px;
-	margin-bottom: 0;
-	text-align: center;
-	height: 30vh;
-
-
+.sectionw {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5vh 20px;
+  margin-top: 100px;
+  margin-bottom: 0;
+  text-align: center;
+  height: 30vh;
 }
 .inner {
-	max-width: 800px;
-	margin: 0 auto;
-	color: #f1f2f3;
-	text-align: center;
+  max-width: 800px;
+  margin: 0 auto;
+  /* color: #f1f2f3; */
+  text-align: center;
 }
 
 .text-title {
-	font-size: 50px;
-	font-weight: 500;
-	letter-spacing: 1px;
-	word-spacing: 2px;
+  font-size: 50px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  word-spacing: 2px;
 }
-.emoji{
-	display: inline-block;
-	transform-origin: 80% 80%;
-	animation: animatedEmoji 1.9s linear infinite;
+.emoji {
+  display: inline-block;
+  transform-origin: 80% 80%;
+  animation: animatedEmoji 1.9s linear infinite;
 }
 .skills {
-	margin-top: 80px;
-	font-size: 30px;
-	color: #f1f2f3;
+  margin-top: 80px;
+  font-size: 30px;
+  /* color: #f1f2f3; */
 }
-
 
 @keyframes animatedEmoji {
-	0% {transform: rotate(0deg);}
-	10% {transform: rotate(-10deg);}
-	20% {transform: rotate(12deg);}
-	30% {transform: rotate(-10deg);}
-	40% {transform: rotate(9deg);}
-	50% {transform: rotate(0deg);}
-	100% {transform: rotate(0deg);}
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(-10deg);
+  }
+  20% {
+    transform: rotate(12deg);
+  }
+  30% {
+    transform: rotate(-10deg);
+  }
+  40% {
+    transform: rotate(9deg);
+  }
+  50% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
-@media screen and (max-width:1380px) {
-	.section {
-		margin-top: 80px;
-	}
+@media screen and (max-width: 1380px) {
+  .section {
+    margin-top: 80px;
+  }
 
-	.text-title {
-		font-size: 55px;
-	}
-	
-	.skills {
-		margin-top: 30px;
-		font-size: 20px;
-	}
+  .text-title {
+    font-size: 55px;
+  }
 
+  .skills {
+    margin-top: 30px;
+    font-size: 20px;
+  }
 }
 @media screen and (max-width: 980px) {
-	.section {
-		margin-top: 60px;
-	}
+  .section {
+    margin-top: 60px;
+  }
 }
-@media screen and (max-width:768px) {
-	.section {
-		margin-top: 80px;
-		padding: 5vh 20px;
-	}
-	.inner {
-		display: block;
-	}
-
+@media screen and (max-width: 768px) {
+  .section {
+    margin-top: 80px;
+    padding: 5vh 20px;
+  }
+  .inner {
+    display: block;
+  }
 }
