--- a/src/style/Team.css
+++ b/src/style/Team.css
@@ -1,41 +1,41 @@
-.team{
-    margin-top: 40px;
-    padding: 100px 20px 0;
+.team {
+  margin-top: 40px;
+  padding: 100px 20px 0;
 }
 .inner {
-    max-width: 1600px;
-    margin: 0 auto;
+  max-width: 1600px;
+  margin: 0 auto;
 }
 .title {
-    font-size: 60px;
-    color: #f1f2f3;
+  font-size: 60px;
+  /*  color: #f1f2f3; */
 }
 .team-cards {
-    margin-top: 50px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 32%);
-    column-gap: 2%;
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 32%);
+  column-gap: 2%;
 }
 
 @media screen and (max-width: 1380px) {
-    .team {
-        padding: 90px 20px 0;
-    }
-   .title {
-        font-size: 50px;
-    }
-   .team-cards {
-        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    }
+  .team {
+    padding: 90px 20px 0;
+  }
+  .title {
+    font-size: 50px;
+  }
+  .team-cards {
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  }
 }
 
 @media screen and (max-width: 768px) {
-   .title {
-        font-size: 32px;
-        text-align: center;
-        font-weight: 500;
-    }
-   .team-cards {
-        grid-template-columns: repeat(auto-fit, 100%);
-    }
+  .title {
+    font-size: 32px;
+    text-align: center;
+    font-weight: 500;
+  }
+  .team-cards {
+    grid-template-columns: repeat(auto-fit, 100%);
+  }
 }
