--- a/src/style/skill.css
+++ b/src/style/skill.css
@@ -1,69 +1,66 @@
 .skills {
-    padding: 110px 20px 0;
-    position: relative;
-    margin-top: 50px;
+  padding: 110px 20px 0;
+  position: relative;
+  margin-top: 50px;
 }
-.divWrapper{
-    max-width: 1600px;
-    display: flex;
-    margin: 0 auto;
+.divWrapper {
+  max-width: 1600px;
+  display: flex;
+  margin: 0 auto;
 }
 .wrapper {
-    margin-left: 10px;
-    flex: 60%;
+  margin-left: 10px;
+  flex: 60%;
 }
- .title {
-    font-size: 60px;
-    font-weight: 400;
-    color: #f1f2f3;
+.title {
+  font-size: 60px;
+  font-weight: 400;
+  /* color: #f1f2f3; */
 }
 
 .skill-cards {
-    margin-top: 50px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 20%);
-    row-gap: 20px;
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 20%);
+  row-gap: 20px;
 }
 
- p {
-    margin-top: 30px;
-    font-weight: 300;
-    text-align: center;
+p {
+  margin-top: 30px;
+  font-weight: 300;
+  text-align: center;
 }
-
 
 @media screen and (max-width: 1380px) {
-    .skills{
-        padding: 90px 20px 0;
-    }
-   .title {
-        font-size: 45px;
-    }
-  
-    .skill-cards {
-        grid-template-columns: repeat(auto-fit, 25%);
-    }
-  
+  .skills {
+    padding: 90px 20px 0;
+  }
+  .title {
+    font-size: 45px;
+  }
+
+  .skill-cards {
+    grid-template-columns: repeat(auto-fit, 25%);
+  }
 }
 
 @media screen and (max-width: 980px) {
-   .skill-cards {
-        grid-template-columns: repeat(auto-fit, 32%);
-    }
+  .skill-cards {
+    grid-template-columns: repeat(auto-fit, 32%);
+  }
 }
 
 @media screen and (max-width: 768px) {
-   .inner {
-        display: block;
-    }
-    .title {
-        font-size: 32px;
-        text-align: center;
-        font-weight: 500;
-    }
+  .inner {
+    display: block;
+  }
+  .title {
+    font-size: 32px;
+    text-align: center;
+    font-weight: 500;
+  }
 
-  
-    .skill-cards {
-        grid-template-columns: repeat(auto-fit, 50%);
-    }
+  .skill-cards {
+    grid-template-columns: repeat(auto-fit, 50%);
+  }
 }
