--- a/src/components/Post/Poststyle.css
+++ b/src/components/Post/Poststyle.css
@@ -3,7 +3,8 @@
 }
 
 .Post-Title{
-    font-size:50px
+    font-size:50px;
+    color: white
 }
 .Post-Content{
     margin-top:50px;
@@ -11,7 +12,7 @@
     font-weight: 400;
     width:100%;
     line-height: 1.5;
-    color:#000;
+
 }
 .Post-content img {
     margin:50px 0;
