--- a/src/components/Work/style.css
+++ b/src/components/Work/style.css
@@ -1,23 +1,22 @@
-.article{
+.work{
     width:100%;
     justify-content: center;
     display: flex;
     align-items: flex-start;
-   border-radius: 10px;
     position: relative;
-    margin: 20px;
+        background-color: #fff;
+
 }
 
 .container{
-    max-width: 1000px;
+    max-width: 1200px;
     display: block;
     padding:10px 20px;
     flex-direction: column;
     
-    
 }
 @media screen and (max-width:768px){
-    .article{
+    .work{
         display: block;
     }
     .ontainer{
