--- a/src/style/SkillCard.css
+++ b/src/style/SkillCard.css
@@ -1,13 +1,11 @@
 .skill-card-main {
-  margin: 0px 10px;
-  padding: 20px 30px;
-  height: auto;
-
-  text-align: center;
-  border-radius: 16px;
-  box-shadow: 13px 13px 6px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  padding: 15px;
+  margin-bottom: 5px;
+  margin-right: 5px;
   background-color: #212223;
-
+  font-size: 25px;
+  text-align: center;
   transition: 0.3s ease-out;
 }
 .skill-card-main:hover {
