--- a/src/index.css
+++ b/src/index.css
@@ -1,42 +1,40 @@
-:root{
-  --main-font:Space;
-  --main-color:#FFF;
-  --second-color:#000;
-  --scrollbar-width:7px;
-  --main-height:82vh;
-}
+
 
 
 *{
+   box-sizing: border-box;
   margin:0;
   padding:0;
+  font-family: 'Merriweather', serif ,Space;
+  
 }
 
 body {
   margin: 0;
-  font-family: Space, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  background-color: 'Black';
+  font-family: 'Merriweather', serif ,Space, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background:var(--second-color);
+   background:#000;
 }
 
 
 @media screen and (min-width:768px){
   body{
-    width: calc(100vw - var(--scrollbar-width));
+    width: calc(100vw - 7px);
   }
 }
 
 
 body::-webkit-scrollbar {
-  width:var(--scrollbar-width);
+  width:7px;
   position: absolute;
 }
 
 body::-webkit-scrollbar-thumb {
-  background :var(--second-color);
+  background :#000;
 }
 
 @font-face {
