--- a/src/index.css
+++ b/src/index.css
@@ -1,74 +1,71 @@
-
-
-
-*{
-   box-sizing: border-box;
-  margin:0;
-  padding:0;
-  font-family: 'Merriweather', serif ,Space;
-  
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Merriweather", serif, Space;
 }
 
 body {
   margin: 0;
-  background-color: 'Black';
-  font-family: 'Merriweather', serif ,Space, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  background-color: "Black";
+  font-family: "Merriweather", serif, Space, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-   background:#000;
+  background: #000;
 }
 
-
-@media screen and (min-width:768px){
-  body{
+@media screen and (min-width: 768px) {
+  body {
     width: calc(100vw - 7px);
   }
 }
 
-
 body::-webkit-scrollbar {
-  width:7px;
+  width: 7px;
   position: absolute;
 }
 
 body::-webkit-scrollbar-thumb {
-  background :#000;
+  background: #000;
 }
 
 @font-face {
-  font-family: 'Space';
+  font-family: "Space";
   font-weight: 400;
-  src: local('SpaceGrotesk'), url(./fonts/SpaceGrotesk/SpaceGrotesk-Regular.woff) format('woff');
+  src: local("SpaceGrotesk"),
+    url(./fonts/SpaceGrotesk/SpaceGrotesk-Regular.woff) format("woff");
 }
 @font-face {
-  font-family: 'Space';
+  font-family: "Space";
   font-weight: 500;
-  src: local('SpaceGrotesk'), url(./fonts/SpaceGrotesk/SpaceGrotesk-Medium.woff) format('woff');
+  src: local("SpaceGrotesk"),
+    url(./fonts/SpaceGrotesk/SpaceGrotesk-Medium.woff) format("woff");
 }
 @font-face {
-  font-family: 'Space';
+  font-family: "Space";
   font-weight: 700;
-  src: local('SpaceGrotesk'), url(./fonts/SpaceGrotesk/SpaceGrotesk-Bold.woff) format('woff');
+  src: local("SpaceGrotesk"),
+    url(./fonts/SpaceGrotesk/SpaceGrotesk-Bold.woff) format("woff");
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-@keyframes fadeup{
-  0%{
-      opacity: 0;
-      transform:translateY(40px)
+@keyframes fadeup {
+  0% {
+    opacity: 0;
+    transform: translateY(40px);
   }
-  100%{
-      transform:translateY(0);
-      opacity: 1;
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
 
-.App{
+.App {
   position: relative;
-  height:100vh
+  height: 100vh;
 }
