--- a/src/style/Project.css
+++ b/src/style/Project.css
@@ -1,22 +1,17 @@
-.section--project {
+.project {
     margin-top: 50px;
     padding: 110px 20px 0;
 }
-.section--project .inner {
+.inner {
     max-width: 1600px;
     margin: 0 auto;
 }
-.section--project .project-title {
+.title {
     font-size: 60px;
     color: #f1f2f3;
 }
-.section--project .project-subtitle {
-    margin-top: 50px;
-    font-size: 25px;
-    color: #c1c2c3;
-    font-weight: 300;
-}
-.section--project .project-cards {
+
+.project-cards {
     margin-top: 50px;
     display: grid;
     grid-template-columns: repeat(auto-fit, 32%);
@@ -24,29 +19,25 @@
 }
 
 @media screen and (max-width: 1380px) {
-    .section--project {
+    project {
         padding: 90px 20px 0;
     }
-    .section--project .project-title {
+    .title {
         font-size: 45px;
     }
-    .section--project .project-subtitle {
-        font-size: 20px;
-    }
-    .section--project .project-cards {
+   
+    .project-cards {
         grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     }
 }
 @media screen and (max-width: 768px) {
-    .section--project .project-title {
+    .title {
         font-size: 32px;
         text-align: center;
         font-weight: 500;
     }
-    .section--project .project-subtitle {
-        text-align: center;
-    }
-    .section--project .project-cards {
+
+    .project-cards {
         grid-template-columns: repeat(auto-fit, 100%);
     }
 }
