--- a/src/components/Post/Poststyle.css
+++ b/src/components/Post/Poststyle.css
@@ -4,7 +4,7 @@
 
 .Post-Title{
     font-size:50px;
-    color: white
+    /* color: black; */
 }
 .Post-Content{
     margin-top:50px;
@@ -12,9 +12,10 @@
     font-weight: 400;
     width:100%;
     line-height: 1.5;
+    background-color: black;
 
 }
 .Post-content img {
     margin:50px 0;
-    width:100%
+    width:10%
 }
