--- a/src/components/UpcomingWorkCard/style.css
+++ b/src/components/UpcomingWorkCard/style.css
@@ -21,7 +21,7 @@
     padding: 30px;
     margin-bottom: 30px;
     background-color: #212223;
-    color: #f1f2f3;
+    color: #212223;
     font-size: 25px;
     text-align: center;
     cursor: pointer;
