--- a/src/style/app.css
+++ b/src/style/app.css
@@ -5,6 +5,7 @@
   justify-content: space-around;
   position: fixed;
   background-color: #0e0f11;
+  color: white;
   height: 8vh;
   width: 100vw;
   z-index: 10;
@@ -13,23 +14,22 @@
 .navbar > div:first-child {
   width: 80%;
 }
+.navbar > div:first-child > a > button > span {
+  color: white;
+}
+
 @media screen and (min-width: 320px) and (max-width: 414px) {
   .navbar {
-    /*  margin-bottom: 50em; */
     padding: 2em 0.2em;
     height: auto;
     display: flex;
     flex-direction: row;
-
     align-items: center;
   }
   .navbar > div:first-child > a > button > span {
-    /* background-color: darkkhaki; */
-    /* width: 70%; */
     font-size: 0.8em;
   }
   .navbar > div:first-child {
-    /* background-color: darkkhaki; */
     width: 70%;
     display: flex;
     flex-direction: row;
@@ -38,7 +38,6 @@
     margin-bottom: 2em 0em;
   }
   .navbar > div:nth-child(2) {
-    /* background-color: darkorchid; */
     width: 30%;
   }
 }
