--- a/src/components/Work/style.css
+++ b/src/components/Work/style.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: flex-start;
     position: relative;
-    background-color: #fff;
+    background-color:black;
 
 }
 
@@ -19,7 +19,7 @@
     .work{
         display: block;
     }
-    .ontainer{
+    .container{
         width:auto
     }
 }
